--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -1,144 +1,158 @@
-@media screen and (min-width:920px) {
+@media screen and (min-width: 1440px) {
+  h1 {
+    font-size: 100px;
+  }
 
-    .container,
-    header,
-    footer {
-        padding-left: 8.33%;
-        padding-right: 8.33%;
-    }
+  h2,
+  footer h3 {
+    font-size: 80px;
+  }
 
-    .hero {
-        grid-template-columns: repeat(12, 1fr);
-        margin-bottom: 256px;
-    }
+  .junior {
+    font-size: 40px;
+  }
+}
 
-    h1 {
-        margin-bottom: 0;
-        grid-column: 1/13;
-    }
+@media screen and (min-width: 920px) {
+  .container,
+  header,
+  footer {
+    padding-left: 8.33%;
+    padding-right: 8.33%;
+  }
 
-    .name {
-        grid-column: 1/4;
-        align-self: end;
-        margin-bottom: 0;
-    }
+  .hero {
+    grid-template-columns: repeat(12, 1fr);
+    margin-bottom: 256px;
+  }
 
-    .hero .arrow {
-        grid-column: 7;
-        margin-bottom: 0;
-    }
+  h1 {
+    margin-bottom: 0;
+    grid-column: 1/13;
+  }
 
-    .me {
-        grid-column: 9/ span 4;
-        justify-self: end;
-    }
+  .name {
+    grid-column: 1/4;
+    align-self: end;
+    margin-bottom: 0;
+  }
 
-    .explore,
-    .passionate,
-    .software {
-        position: relative;
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        height: 100%;
-        margin-top: 256px;
-    }
+  .hero .arrow {
+    grid-column: 7;
+    margin-bottom: 0;
+  }
 
-    .sticky {
-        position: sticky;
-        top: 128px;
-        grid-column: 1/7;
-        height: min-content;
-    }
+  .me {
+    grid-column: 9 / span 4;
+    justify-self: end;
+  }
 
-    .about p {
-        margin-top: 0;
-        margin-bottom: 0;
-        font-size: 24px;
-        grid-column: 1/6;
-    }
+  .explore,
+  .passionate,
+  .software {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    height: 100%;
+    margin-top: 256px;
+  }
 
-    .img-grid,
-    .img-container,
-    .software-list {
-        grid-column: 7/13;
-        justify-self: end;
-    }
+  .sticky {
+    position: sticky;
+    top: 128px;
+    grid-column: 1/7;
+    height: min-content;
+  }
 
-    .software-list {
-        width: 100%;
-        justify-content: space-between;
-    }
+  .about p {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 24px;
+    grid-column: 1/6;
+  }
 
-    .software img {
-        height: 60px;
-    }
+  .img-grid,
+  .img-container,
+  .software-list {
+    grid-column: 7/13;
+    justify-self: end;
+  }
 
-    .projects {
-        padding: 0;
-    }
+  .software-list {
+    width: 100%;
+    justify-content: space-between;
+  }
 
-    .project {
-        grid-template-columns: repeat(12, 1fr);
-    }
+  .software img {
+    height: 60px;
+  }
 
-    .project-main,
-    .layout {
-        grid-column: 1/7;
-        margin-bottom: 0;
-    }
+  .projects {
+    padding: 0;
+  }
 
-    .mockup,
-    .project-more {
-        grid-column: 7/13;
-    }
+  .project {
+    grid-template-columns: repeat(12, 1fr);
+  }
 
-    .project-more {
-        grid-column: 7/13;
-        margin-left: 16px;
-    }
+  .project-main,
+  .layout {
+    grid-column: 1/7;
+    margin-bottom: 0;
+  }
 
-    .description {
-        font-size: 18px;
-        align-self: start;
-    }
+  .mockup,
+  .project-more {
+    grid-column: 7/13;
+  }
 
-    footer {
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: repeat(3, auto);
-        row-gap: 128px;
-    }
+  .project-more {
+    grid-column: 7/13;
+    margin-left: 16px;
+  }
 
-    .idea {
-        grid-column: 1/7;
-        margin-bottom: 0;
-    }
+  .description {
+    font-size: 18px;
+    align-self: start;
+  }
 
-    .footer-social {
-        grid-column: 7/13;
-        /* justify-self: end; */
-        margin-bottom: 0;
-        justify-self: end;
-        width: 305px;
-        align-self: end;
-    }
+  footer {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(3, auto);
+    row-gap: 128px;
+  }
 
-    .footer-nav {
-        grid-column: 7/13;
-        margin-bottom: 0;
-        grid-row: 2;
-    }
+  .idea {
+    grid-column: 1/7;
+    margin-bottom: 0;
+  }
 
-    .legal {
-        grid-column: 1/7;
-        grid-row: 2;
-    }
+  .footer-social {
+    grid-column: 7/13;
+    /* justify-self: end; */
+    margin-bottom: 0;
+    justify-self: end;
+    width: 305px;
+    align-self: end;
+  }
 
-    .legal li {
-        width: fit-content;
-    }
+  .footer-nav {
+    grid-column: 7/13;
+    margin-bottom: 0;
+    grid-row: 2;
+  }
 
-    .flex {
-        grid-column: 1/13;
-    }
+  .legal {
+    grid-column: 1/7;
+    grid-row: 2;
+  }
+
+  .legal li {
+    width: fit-content;
+  }
+
+  .flex {
+    grid-column: 1/13;
+  }
 }
